# extract-on-demand-sp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  REGRAS_DE_NEGOCIO_IW69_IW59.txt  brs_filtrados.csv  brs_filtrados_erica.csv  docker-compose.yml  exemplo_sap_gui_export.py  gruporegsap.xlsx  instalacaosp.xlsx  pyproject.toml  sap_dw.py  sap_gui_export_compat.py  sap_iw51_dani.py  sap_iw69_batch.py  sap_iw69_batch_config.json  sap_valida_dani.py  ~$projeto_Dani2.xlsm
docs/: CONTRIBUTING.md  ENV.md  RUNBOOK.md  SPRINT_1.md  SPRINT_2.md  SPRINT_DW.md  SPRINT_IW51.md
elt_enel_sftp/: __init__.py
sap_automation/: __init__.py  api.py  api_models.py  artifacts.py  batch.py  config.py  consolidation.py  contracts.py  control_plane.py  credentials.py  db_runner.py  dw.py  errors.py  execution.py  integrations.py  iw51.py  iw59.py  legacy_runner.py  login.py  logon.py  lotes_sp_lat_lng_repository.py  lotes_sp_lat_lng_tool.py  medidor.py  medidor_raw_tool.py  medidor_repository.py  runner.py  runtime_logging.py  sap_helpers.py  scheduler.py  service.py  sm.py  sm_repository.py  valida_dani.py
scripts/: check_sm_ingest_db.sh  collect_sm_diagnostics.sh  create_sm_workflow.sh  run_control_plane_daily_sm.sh  run_windows_sap_runner.ps1
tests/: test_api_endpoints.py  test_api_payload.py  test_api_structure.py  test_batch.py  test_consolidation.py  test_contracts_and_artifacts.py  test_control_plane.py  test_credentials.py  test_dw.py  test_execution.py  test_integrations.py  test_iw51.py  test_iw59.py  test_login.py  test_logon.py  test_logon_session_provider.py  test_lotes_sp_lat_lng_tool.py  test_medidor.py  test_sap_gui_export_compat.py  test_service.py  test_sm.py  test_valida_dani.py
(+2 files in other folders)
