[tool.poetry]
name = "extract-on-demand-sp"
version = "0.1.0"
description = "SAP GUI extraction batch automation for IW69 operational exports."
authors = ["Codex <codex@example.com>"]
packages = [
  { include = "sap_automation" },
  { include = "elt_enel_sftp" },
]

[tool.poetry.dependencies]
python = "^3.12"
charset-normalizer = "*"
fastapi = "^0.116.1"
openpyxl = "^3.1.5"
pywin32 = { version = "*", markers = "platform_system == 'Windows'" }
python-dotenv = "^1.1.1"
pywinauto = { version = "^0.6.9", markers = "platform_system == 'Windows'" }
uvicorn = { version = "^0.35.0", extras = ["standard"] }
sqlalchemy = "^2.0.48"
redis = "^7.4.0"
croniter = "^6.2.2"
psycopg = {extras = ["binary"], version = "^3.3.3"}
pyodbc = "^5.3.0"
pyxlsb = "^1.0.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
